--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,17 @@
 <resources>
     <string name="app_name">App Alfonso</string>
     <string name="log_in">Log In</string>
+    <string name="log_out">Log Out</string>
     <string name="cancel">Cancel</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="my_account">My Account</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
+    <string name="form">Form</string>
+    <string name="list">List</string>
+    <string name="resume">Resume</string>
+    <string name="tools">Tools</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -16,7 +22,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="log_out">Log Out</string>
 
     <string-array name="Info">
         <item>Alfonso</item>
@@ -28,7 +33,6 @@
         <item>Comercial</item>
         <item>No hay comentarios</item>
     </string-array>
-
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
